--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li>
             Chair <i class="fas fa-angle-down"></i>
             <ul>
-              <li><a href="">Stood Chair</a></li>
+              <li><a href="#stood-c">Stood Chair</a></li>
               <li><a href="">Side Chair</a></li>
               <li><a href="">Arm Chair</a></li>
             </ul>
@@ -35,17 +35,17 @@
           <li>
             Storage <i class="fas fa-angle-down"></i>
             <ul>
-              <li><a href="">Stood Chair</a></li>
-              <li><a href="">Side Chair</a></li>
-              <li><a href="">Arm Chair</a></li>
+              <li><a href="">C6 Storage</a></li>
+              <li><a href="">C9 Storage</a></li>
+              <li><a href="">Other Storage</a></li>
             </ul>
           </li>
           <li>
             Table <i class="fas fa-angle-down"></i>
             <ul>
-              <li><a href="">Stood Chair</a></li>
-              <li><a href="">Side Chair</a></li>
-              <li><a href="">Arm Chair</a></li>
+              <li><a href="">Dining Table</a></li>
+              <li><a href="">Side Table</a></li>
+              <li><a href="">Outdoor Table</a></li>
             </ul>
           </li>
           <li><a href="">About</a></li>
@@ -58,7 +58,7 @@
       </div>
     </header>
     <div class="grid">
-      <div class="item1">
+      <div class="item1" id="stood-c">
         <h1>Stood Chair</h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure ab
